--- a/manual.html
+++ b/manual.html
@@ -478,7 +478,7 @@
   <!-- Thumbnails -->
   <div class="thumbnail-strip">
     <img src="manual/JanasabhaManual1.jpg" class="thumbnail active">
-    <img src="manual/JanasabhaManual21.jpg" class="thumbnail">
+    <img src="manual/JanasabhaManual2.jpg" class="thumbnail">
     <img src="manual/JanasabhaManual3.jpg" class="thumbnail">
     <img src="manual/JanasabhaManual4.jpg" class="thumbnail">
     <img src="manual/JanasabhaManual5.jpg" class="thumbnail">
@@ -660,6 +660,7 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
 
