--- a/index.html
+++ b/index.html
@@ -1468,7 +1468,7 @@ button.next {
   <li><a href="index.html#gallery-section">Gallery</a></li>
   <li><a href="index.html#testimony-section">Testimonies</a></li>
   <li><a href="index.html#Jointhemovement-section">Join the Movement</a></li> 
-         <li><a href="news.html">News</a></li>
+         <li><a href="news.html"></a></li>
   <li><a href="index.html#contact-section">Contact Us</a></li>
       </ul>
     </div>
@@ -1826,8 +1826,8 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
 •	Organizing skills
 •	Team spirit and initiative
 •	Free from prejudices 
-•	Patriotism 
-
+•	Patriotism <br>
+<h3>-Call for District Level Janasabha Volunteers-</h3>
     </p>
 
     <div class="join-grid">
@@ -2509,6 +2509,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
