--- a/index.html
+++ b/index.html
@@ -1826,7 +1826,7 @@ Sree Narayana Guru, the great Renaissance leader and saint who fought against so
 •	Organizing skills
 •	Team spirit and initiative
 •	Free from prejudices 
-•	Patriotism <br>
+•	Patriotism <br> <br>
 <h3>-Call for District Level Janasabha Volunteers-</h3>
     </p>
 
@@ -2509,6 +2509,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
