--- a/index.html
+++ b/index.html
@@ -1428,7 +1428,7 @@ button.next {
   <li><a href="index.html#gallery-section">Gallery</a></li>
   <li><a href="index.html#testimony-section">Testimonies</a></li>
   <li><a href="index.html#Jointhemovement-section">Join the Movement</a></li>
-    <li><a href="news.html">News</a></li>
+    <li><a href="news.html"> </a></li>
   <li><a href="index.html#contact-section">Contact Us</a></li>
 </ul>
 
@@ -2509,6 +2509,7 @@ function closeVideoModal() {
 
 </body>
 </html>
+
 
 
 
