--- a/page-mannjan.html
+++ b/page-mannjan.html
@@ -1983,12 +1983,12 @@ cultural fest, seminars, medical camps, competitions, entrepreneurship training,
     <!-- MOTTO -->
     <div class="footer-section motto">
       <h3>Our Motto</h3>
-      <p>“Unity, Peace, and Development”</p>
+      <p>“Love, Unity, and Development”</p>
     </div>
   </div>
 
   <div class="footer-bottom">
-    <p>© 2025 Mannanam Janasabha. All Rights Reserved.</p>
+    <p>© 2026 Mannanam Janasabha. All Rights Reserved.</p>
   </div>
 </footer>
 
@@ -2428,6 +2428,7 @@ function closeVideoModal() {
 </body>
 
 </html>
+
 
 
 
